# magneta-rs

./: .gitattributes  Cargo.toml  LICENSE  Makefile  README.md  config.toml
.github/workflows/: rust.yml
src/: lib.rs  macros.rs  main.rs  site_registry.rs
src/sites/: mod.rs  torrentrj.rs  torrentsome.rs  torrenttop.rs
tests/: torrentrj_test.rs  torrentsome_test.rs  torrenttop_test.rs
tests/data/torrentrj/: magnet_sample.html  search_sample.html
tests/data/torrentsome/: magnet_sample.html  search_sample.html
tests/data/torrenttop/: magnet_sample.html  search_sample.html
