[package]
name = "magneta"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
scraper = "0.13"
prettytable-rs = "0.10"
anyhow = "1.0"
async-trait = "0.1"
urlencoding = "2.1"
futures = "0.3"
indicatif = "0.17"
config = "0.15.11"
log = "0.4"
env_logger = "0.10"